# BackgroundSubtractorCNT

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  about.md  bgsubcnt.cpp  bgsubcnt.h  demo.md  donate.md  doxygen_header.html.in  doxygen_main.md  main.cpp  start.md
_docUpdate/: recreate_search_box.pl  update_doxygen.sh
_includes/: head.html  header.html
_layouts/: home.html  reference.html
assets/: main.scss
deb/: postinst  postrm
docs/: Gemfile  README.md  _config.yml  about.md  sitemap.xml  start.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: home.html
docs/assets/: main.scss
docs/doxygen/html/: annotated.html  bgsubcnt_8h.html  bgsubcnt_8h_source.html  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT-members.html  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT.html  classes.html  dir_58f4416e86c10acab290c61ed0745739.html  examples.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  main_8cpp-example.html  python_2demo_8py-example.html
docs/doxygen/html/search/: all_2.html  all_3.html  all_4.html  files_0.js  functions_0.html  functions_0.js  functions_1.html  functions_1.js  functions_2.html  functions_2.js  pages_0.js
docs/doxygen/latex/: annotated.tex  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT.eps  dir_58f4416e86c10acab290c61ed0745739.tex  examples.tex  index.tex  python_2demo_8py-example.tex  refman.tex
doxygen/html/: annotated.html  bgsubcnt_8h.html  bgsubcnt_8h_source.html  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT-members.html  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT.html  classes.html  dir_58f4416e86c10acab290c61ed0745739.html  dir_675c60eb416ec84a01ca380fc2e96667.html  doxygen_style.css  examples.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  main_8cpp-example.html  namespacecv.html  namespacecv_1_1bgsubcnt.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  python_2demo_8py-example.html
doxygen/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  classes_0.html  classes_0.js  files_0.html  functions_0.js  namespaces_0.js  nomatches.html  pages_0.html  searchdata.js
doxygen/latex/: annotated.tex  bgsubcnt_8h.tex  classcv_1_1bgsubcnt_1_1BackgroundSubtractorCNT.tex  dir_675c60eb416ec84a01ca380fc2e96667.tex  files.tex  hierarchy.tex  index.tex  main_8cpp-example.tex  namespacecv.tex  namespacecv_1_1bgsubcnt.tex  namespaces.tex  python_2demo_8py-example.tex  refman.tex
doxygen_in/: Doxyfile.in
python/: .gitignore  CMakeLists.txt  bgsubcnt.i  cmake_install.cmake  demo.py  opencv_swig_python.cpp  opencv_swig_python.h  setup.py.in
